# fastapi-sqlmodel

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py  security.py
app/entities/: common.py  hero.py  pokemons.py  team.py  token.py  user.py
app/routers/: heroes.py  login.py  pokemons.py  teams.py  users.py
app/use_cases/: __init__.py  base.py  heroes.py  pokemons.py  teams.py  users.py
scripts/: pokemons.py  populate_database.py
tests/: conftest.py  test_pokemons.py
tests/api/: test_heroes.py  test_teams.py  test_users.py
tests/utils/: users.py
