[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Julien Pillaud <julien.pillaud@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlmodel = "^0.0.12"
pytest = "^7.4.3"
coverage = "^7.3.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
mypy = "^1.7.0"
pytest = "^7.4.3"
httpx = "^0.25.1"
types-python-jose = "^3.3.4.8"
types-passlib = "^1.7.7.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["app"]

[tool.mypy]
strict = true
no_implicit_reexport = false

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]
